[discover/table] watch the columns as a collection, fixes #334

--- a/desktop/src/kibana/apps/discover/partials/table.html
+++ b/desktop/src/kibana/apps/discover/partials/table.html
@@ -1,9 +1,20 @@
 <table class="table">
-  <thead kbn-table-header columns="columns" mapping="mapping" sorting="sorting" timefield="timefield"></thead>
+  <thead
+    kbn-table-header
+    columns="columns"
+    mapping="mapping"
+    sorting="sorting"
+    timefield="timefield">
+  </thead>
   <tbody>
     <tr ng-repeat="row in rows |limitTo:limit track by row._index+row._id"
       kbn-table-row="row"
-      columns="columns" mapping="mapping" sorting="sorting" timefield="timefield" max-length="maxLength" filtering="filtering"
+      columns="columns"
+      mapping="mapping"
+      sorting="sorting"
+      timefield="timefield"
+      max-length="maxLength"
+      filtering="filtering"
       class="discover-table-row"></tr>
   </tbody>
 </table>
