alignment and spacing in objects

--- a/desktop/src/kibana/apps/settings/styles/main.less
+++ b/desktop/src/kibana/apps/settings/styles/main.less
@@ -39,7 +39,7 @@ kbn-settings-objects {
   .action-bar {
     margin-top: 10px;
     background-color: @gray-lighter;
-    padding: 4px 8px;
+    padding: 4px 12px;
 
     .btn-xs {
       font-size: 10px;
@@ -69,6 +69,20 @@ kbn-settings-objects-view {
       &.actions {
         width: 150px;
       }
+    }
+  }
+}
+
+.objects-settings {
+  .item {
+    padding: 12px;
+
+    .item-title {
+      margin-left: 30px;
+    }
+
+    .actions {
+      margin-top: -6px;
     }
   }
 }
