center the text in the advanced app

--- a/desktop/src/kibana/apps/settings/styles/main.less
+++ b/desktop/src/kibana/apps/settings/styles/main.less
@@ -48,6 +48,14 @@ kbn-settings-objects {
 
 }
 
+kbn-settings-advanced {
+  // super specific rule to override bootstrap's equally specific rule
+  // https://github.com/twbs/bootstrap/blob/1f329f8f17aa989eabc6e94bdcab93e69ef0e463/less/tables.less#L35
+  .table > tbody > tr > td {
+    vertical-align: middle;
+  }
+}
+
 kbn-settings-objects-view {
   label {
     font-family: @font-family-monospace;
