--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -30,8 +30,8 @@
 
 // custom navbar style
 @import "./_navbar.less";
-
 @import "./_sidebar.less";
+@import "./_truncate.less";
 
 html,
 body {
@@ -391,6 +391,5 @@ input[type="checkbox"],
   color: #999;
   margin-left: 10px !important;
 }
-
 
 @import '../components/filter_bar/filter_bar.less';
