prevent style-compile from being rendered as text

--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -392,4 +392,8 @@ input[type="checkbox"],
   margin-left: 10px !important;
 }
 
+style-compile {
+  display: none;
+}
+
 @import '../components/filter_bar/filter_bar.less';
