create a new font icon for new file

--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -16,8 +16,9 @@
 // call outs
 @import "./_callout.less";
 
-// call outs
+// font icons
 @import "./icon_font.css";
+@import "./_font_icons.less";
 
 // FontAwesome fills for glyphicons in bootstrap components
 @import "./_glyphicons.less";
