--- a/desktop/src/kibana/components/filter_bar/filter_bar.html
+++ b/desktop/src/kibana/components/filter_bar/filter_bar.html
@@ -5,7 +5,7 @@
       <span>"{{ filter.value }}"</span>
     </div>
     <div class="filter-actions">
-      <a class="filter-toggle" ng-click="toggleFilter(filter)">toggle</a>
+      <a class="filter-toggle" ng-click="toggleFilter(filter)"><span ng-show="filter.disabled">enable</span><span ng-hide="filter.disabled">disable</span></a>
       <a class="filter-remove" ng-click="removeFilter(filter)">remove</a>
     </div>
   </div>
