Add timepicker button and query tips to 'no results' message. Add navbtn and navbtn-inverse classes for buttons that look like the navbar

--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -210,6 +210,14 @@ notifications {
   }
 }
 
+.navbtn {
+  .button-variant(@navbar-default-color; @navbar-default-bg; @navbar-default-border);
+}
+
+.navbtn-inverse {
+  .button-variant(@navbar-default-color; @navbar-default-bg; @navbar-default-border);
+}
+
 // right section of the main nav base
 .navbar-static-top .navbar-right {
   font-size: @font-size-small;
