set min-=0 for terms and historgam aggrigations

--- a/desktop/src/kibana/components/agg_types/controls/interval.html
+++ b/desktop/src/kibana/components/agg_types/controls/interval.html
@@ -14,5 +14,7 @@
     required
     type="number"
     class="form-control"
-    name="interval" />
+    name="interval"
+    min="0"
+    >
 </div>
