--- a/desktop/src/kibana/components/agg_types/controls/order_and_size.html
+++ b/desktop/src/kibana/components/agg_types/controls/order_and_size.html
@@ -16,6 +16,8 @@
       ng-model="params.size"
       required
       class="form-control"
-      type="number">
+      type="number"
+      min="0"
+      >
   </div>
 </div>
