add fork icon to sub aggregations

--- a/desktop/src/kibana/apps/visualize/editor/editor.less
+++ b/desktop/src/kibana/apps/visualize/editor/editor.less
@@ -92,6 +92,11 @@
         margin-right: @vis-editor-agg-editor-spacing;
       }
 
+      &-subagg-icon {
+        .flex(0, 1, auto);
+        padding-right: @padding-base-vertical;
+      }
+
       &-title {
         .flex(1, 1, auto);
         .ellipsis();
