Make icons and font in step 2 of the vis wizard a bit bigger

--- a/desktop/src/kibana/apps/visualize/styles/main.less
+++ b/desktop/src/kibana/apps/visualize/styles/main.less
@@ -12,6 +12,11 @@
 
 .visualizations .visualization i {
   margin-right: @padding-base-horizontal;
+  font-size: 1.5em;
+}
+
+.visualizations {
+  font-size: 1.2em;
 }
 
 @import "../editor/editor.less";
