updated main.less and tooltip.js to use visibility rather than display to improve performance of tooltip display

--- a/desktop/src/kibana/components/vislib/styles/main.less
+++ b/desktop/src/kibana/components/vislib/styles/main.less
@@ -212,7 +212,7 @@ p.rows-label, p.columns-label {
 }
 
 .k4tip, .vis-tooltip {
-  display: none;
+  visibility: hidden;
   line-height: 1.1;
   font-size: 12px;
   font-weight: normal;
