updated tooltip to use jQuery width and height rather for better browser compatibility, added offset to move tip on rollout

--- a/desktop/src/kibana/components/vislib/styles/main.less
+++ b/desktop/src/kibana/components/vislib/styles/main.less
@@ -211,7 +211,7 @@ p.rows-label, p.columns-label {
   stroke: 3px;
 }
 
-.k4tip, .vis-tooltip {
+.vis-tooltip {
   visibility: hidden;
   line-height: 1.1;
   font-size: 12px;
