--- a/desktop/src/kibana/apps/visualize/editor/editor.less
+++ b/desktop/src/kibana/apps/visualize/editor/editor.less
@@ -38,12 +38,14 @@
 
   &-sidebar {
     .flex-parent(0, 0, auto);
+
     overflow: auto;
 
     // overrided for tablet and desktop
     @media (min-width: @screen-md-min) {
       .flex-basis(@vis-editor-sidebar-basis);
       min-width: @vis-editor-sidebar-min-width;
+      max-width: @vis-editor-sidebar-min-width;
       margin-bottom: (@input-height-base * 2) - 3;
     }
 
