[histogram/tooltip] include the aggConfig's label rather than field name

--- a/desktop/src/kibana/components/vis_types/tooltips/histogram.html
+++ b/desktop/src/kibana/components/vis_types/tooltips/histogram.html
@@ -1,22 +1,14 @@
 <table>
   <thead>
     <tr>
-      <th>Field</th>
+      <th></th>
       <th>Value</th>
     </tr>
   </thead>
   <tbody>
-    <tr ng-if="colorName">
-      <td>{{colorName}}</td>
-      <td>{{colorValue}}</td>
-    </tr>
-    <tr>
-      <td>{{xName}}</td>
-      <td>{{xValue}}</td>
-    </tr>
-    <tr>
-      <td>{{yName}}</td>
-      <td>{{yValue}}</td>
+    <tr ng-repeat="detail in details">
+      <td>{{detail.label}}</td>
+      <td>{{detail.value}}</td>
     </tr>
   </tbody>
 </table>
