[discover/table] reorganized files and pulled html into seperate templates

--- a/desktop/src/kibana/apps/discover/styles/main.less
+++ b/desktop/src/kibana/apps/discover/styles/main.less
@@ -68,7 +68,7 @@
     white-space: nowrap;
   }
 
-  &-open-toggle .fa {
+  &-open-icon {
     // when switching between open and closed, the toggle changes size
     // slightly which is a problem because it forces the entire table to
     // re-render which is SLOW
