--- a/desktop/src/kibana/components/vis_types/tooltips/histogram.html
+++ b/desktop/src/kibana/components/vis_types/tooltips/histogram.html
@@ -1,13 +1,7 @@
 <table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Value</th>
-    </tr>
-  </thead>
   <tbody>
-    <tr ng-repeat="detail in details">
-      <td>{{detail.label}}</td>
+    <tr ng-repeat="detail in details" >
+      <td><b>{{detail.label}}</b></td>
       <td>{{detail.value}}</td>
     </tr>
   </tbody>
