--- a/desktop/src/kibana/components/vislib/styles/main.less
+++ b/desktop/src/kibana/components/vislib/styles/main.less
@@ -231,13 +231,18 @@ p.rows-label, p.columns-label {
       padding: 2px 4px;
     }
 
-    tr {
+    // if there is a header, give it a border that matches
+    // those in the body
+    thead tr {
       border-bottom: 1px solid @gray;
     }
 
     // only apply to tr in the body, not the header
-    tbody tr:last-child {
-      border-bottom: none;
+    tbody tr {
+      border-top: 1px solid @gray;
+      &:first-child {
+        border-top: none;
+      }
     }
   }
 }
