make vis spy a fixed height

--- a/desktop/src/kibana/components/visualize/visualize.less
+++ b/desktop/src/kibana/components/visualize/visualize.less
@@ -76,6 +76,7 @@ visualize-spy {
     .display(flex);
     .flex-direction(column);
 
+    height: 382px;
     padding: 10px 10px 0;
     overflow-y: auto;
 
