--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -28,10 +28,11 @@
 // Pagniation directive
 @import "./_pagination.less";
 
-// custom navbar style
+// custom control style
 @import "./_navbar.less";
 @import "./_sidebar.less";
 @import "./_truncate.less";
+@import "./_control_group.less";
 
 html,
 body {
