justify the nav pills

--- a/desktop/src/kibana/components/visualize/spy/_spy.html
+++ b/desktop/src/kibana/components/visualize/spy/_spy.html
@@ -4,7 +4,7 @@
   </small>
 </div>
 <header ng-if="spyMode" class="control-group">
-  <ul class="fill nav nav-pills visualize-spy-tabs">
+  <ul class="fill nav nav-pills nav-justified visualize-spy-tabs">
     <li
       ng-repeat="mode in modes"
       ng-class="{ active: spyMode.name === mode.name }">
