--- a/desktop/src/kibana/components/visualize/visualize.less
+++ b/desktop/src/kibana/components/visualize/visualize.less
@@ -89,6 +89,10 @@ visualize-spy {
     }
   }
 
+  &.only .visualize-spy-container {
+    height: auto;
+  }
+
   // this is the default, double-arrow sort that is just a hint to the user that they can sort
   .visualize-table th i.fa-sort {
     color: @gray-light;
