[vis/editor] style errors a bit, show above the schemaConfig

--- a/desktop/src/kibana/apps/visualize/editor/styles/editor.less
+++ b/desktop/src/kibana/apps/visualize/editor/styles/editor.less
@@ -138,6 +138,14 @@
       }
     }
 
+    &-error {
+      margin: @vis-editor-agg-editor-spacing 0;
+      padding: @vis-editor-agg-editor-spacing;
+      text-align: center;
+      background: @btn-danger-bg;
+      color: @btn-danger-color;
+    }
+
     &-editor {
       margin-top: @vis-editor-agg-editor-spacing;
 
