set pagination using the table spy's scope

--- a/desktop/src/kibana/components/visualize/spy/_table.html
+++ b/desktop/src/kibana/components/visualize/spy/_table.html
@@ -1,4 +1,4 @@
-<paginate list="rows" per-page="10">
+<paginate list="rows" per-page="perPage">
   <table class="table table-condensed visualize-table">
     <thead>
       <tr bindonce>
