don't use bootstrap pills, use buttons, update styling

--- a/desktop/src/kibana/components/visualize/spy/_spy.html
+++ b/desktop/src/kibana/components/visualize/spy/_spy.html
@@ -4,13 +4,15 @@
   </small>
 </div>
 <header ng-if="spyMode" class="control-group">
-  <ul class="fill nav nav-pills nav-justified visualize-spy-tabs">
-    <li
+  <div class="fill visualize-spy-nav">
+    <button
+      class="btn btn-default"
       ng-repeat="mode in modes"
-      ng-class="{ active: spyMode.name === mode.name }">
-      <a ng-click="setSpyMode(mode)">{{mode.display}}</a>
-    </li>
-  </ul>
+      ng-class="{ active: spyMode.name === mode.name }"
+      ng-click="setSpyMode(mode)">
+      {{mode.display}}
+    </button>
+  </div>
   <div class="button-group">
     <button ng-click="toggleFullPage()">
       <i ng-if="!spyMode.fill" class="fa fa-expand"></i>
