--- a/desktop/src/kibana/components/visualize/visualize.less
+++ b/desktop/src/kibana/components/visualize/visualize.less
@@ -125,10 +125,14 @@ visualize-spy {
     }
   }
 
-  .visualize-spy-tabs {
+  .visualize-spy-nav {
     margin-top: 10px;
     margin-bottom: 10px;
     .flex(0, 0, auto);
+
+    button {
+      margin: @padding-small-vertical @padding-small-vertical;
+    }
   }
 
   pre {
