--- a/desktop/src/kibana/styles/_control_group.less
+++ b/desktop/src/kibana/styles/_control_group.less
@@ -36,12 +36,7 @@
       background-color: @control-group-link-hover-bg;
     }
 
-    &:focus {
-      color: @control-group-link-color;
-      background-color: @control-group-bg;
-    }
-
-    &:active {
+    .active, &:active, &:focus {
       color: @control-group-link-active-color;
       background-color: @control-group-link-active-bg;
     }
