--- a/desktop/src/kibana/styles/theme/_variables.less
+++ b/desktop/src/kibana/styles/theme/_variables.less
@@ -330,10 +330,10 @@
 @control-group-bg:                     inherit;
 @control-group-border:                 @gray-dark;
 @control-group-link-color:             @link-color;
-@control-group-link-hover-color:       lighten(@link-color, 20%);
-@control-group-link-hover-bg:          transparent;
-@control-group-link-active-color:      darken(@link-color, 20%);
-@control-group-link-active-bg:         lighten(@brand-primary, 20%);
+@control-group-link-hover-color:       @gray-lighter;
+@control-group-link-hover-bg:          lighten(@brand-primary, 10%);
+@control-group-link-active-color:      @gray-light;
+@control-group-link-active-bg:         lighten(@brand-primary, 10%);
 @control-group-link-disabled-color:    @gray-light;
 @control-group-link-disabled-bg:       transparent;
 
