--- a/desktop/src/kibana/components/visualize/visualize.less
+++ b/desktop/src/kibana/components/visualize/visualize.less
@@ -130,7 +130,7 @@ visualize-spy {
     margin-bottom: 10px;
     .flex(0, 0, auto);
 
-    button {
+    a.btn {
       margin: @padding-small-vertical @padding-small-vertical;
     }
   }
