set table cell width properly

--- a/desktop/src/kibana/apps/settings/styles/main.less
+++ b/desktop/src/kibana/apps/settings/styles/main.less
@@ -71,6 +71,9 @@ kbn-settings-objects-view {
   }
 
   &-versions {
+    td {
+      width: 50%;
+    }
 
     td:first-child {
       font-weight: bold;
