--- a/desktop/src/kibana/components/agg_types/controls/interval.html
+++ b/desktop/src/kibana/components/agg_types/controls/interval.html
@@ -4,10 +4,10 @@
     ng-if="aggParam.options"
     ng-model="params.interval"
     required
-    kbn-valid-options="aggParam.options.raw | filter:optionEnabled"
     ng-options="opt as opt.display for opt in aggParam.options.raw | filter:optionEnabled"
     class="form-control"
     name="interval">
+    <option value="">-- select a valid interval --</option>
   </select>
   <input
     ng-if="!aggParam.options"
