style the regex flags, add link to docs

--- a/desktop/src/kibana/apps/visualize/editor/styles/editor.less
+++ b/desktop/src/kibana/apps/visualize/editor/styles/editor.less
@@ -161,6 +161,22 @@
           }
         }
       }
+
+      .regex .flags {
+        .docs {
+          float: right;
+          margin: @vis-editor-agg-editor-spacing;
+
+          a {
+            color: @gray-lighter;
+          }
+        }
+
+        label {
+          padding: 0 @vis-editor-agg-editor-spacing;
+          font-weight: normal;
+        }
+      }
     }
 
     &-form-row {
