remove label margin

--- a/desktop/src/kibana/apps/visualize/editor/styles/editor.less
+++ b/desktop/src/kibana/apps/visualize/editor/styles/editor.less
@@ -173,6 +173,7 @@
         }
 
         label {
+          margin: 0;
           padding: 0 @vis-editor-agg-editor-spacing;
           font-weight: normal;
         }
