--- a/desktop/src/kibana/components/filter_bar/filter_bar.html
+++ b/desktop/src/kibana/components/filter_bar/filter_bar.html
@@ -9,7 +9,32 @@
       <a class="filter-remove" ng-click="removeFilter(filter)">remove</a>
     </div>
   </div>
-  <div class="filter-remove-all" ng-click="removeFilters()">
-    <div class="filter-description"><a ng-click="removeAll()">remove all</a></div>
+  <div class="filter-link">
+    <div class="filter-description small">
+      <a ng-click="showFilterActions = !showFilterActions">
+        Actions
+        <i class="fa"
+        ng-class="{'fa-caret-down': showFilterActions, 'fa-caret-right': !showFilterActions}"></i>
+      </a>
+    </div>
+  </div>
+</div>
+<div class="bar bar-condensed" ng-show="filters.length && showFilterActions">
+  <div class="filter-actions-all">
+    <div class="filter-link">
+      <div class="filter-description"><strong>All filters:</strong></div>
+    </div>
+    <div class="filter-link">
+      <div class="filter-description"><a ng-click="toggleAll(false)">Enable</a></div>
+    </div>
+    <div class="filter-link">
+      <div class="filter-description"><a ng-click="toggleAll(true)">Disable</a></div>
+    </div>
+    <div class="filter-link">
+      <div class="filter-description"><a ng-click="toggleAll()">Toggle</a></div>
+    </div>
+    <div class="filter-link">
+      <div class="filter-description"><a ng-click="removeAll()">Remove</a></div>
+    </div>
   </div>
 </div>
